realmd: Make sure error message doesn't overflow the dialog. Fixes #3222

--- a/pkg/base1/cockpit.css
+++ b/pkg/base1/cockpit.css
@@ -970,3 +970,9 @@ div.timeline.timeline-end .timeline-md {
     height: 3px;
     left: 0px;
 }
+
+/* This should go in a better place and not this file */
+
+.realms-op-diagnostics {
+    max-width: 550px;
+}
